@@ -76,9 +76,14 @@ extern "C" {
 #endif
 
   _CRTIMP void __cdecl _ftime64(struct __timeb64 *_Time);
-  _CRTIMP void __cdecl _ftime(struct __timeb32 *);
 
+#ifdef _WIN64
+#define _timeb __timeb64
+  _CRTIMP void __cdecl _ftime(struct __timeb64 *);
+#else
 #define _timeb __timeb32
+  _CRTIMP void __cdecl _ftime(struct __timeb32 *);
+#endif
 
 #ifndef _TIMESPEC_DEFINED
 #define _TIMESPEC_DEFINED
