@@ -1,3 +1,9 @@
+2011-12-13  Jonathan Lui  <user net147 at sourceforge>
+
+	* sys/timeb.h (_ftime): Fix default definition for 32-bit vs.
+	64-bit Windows.
+	(_timeb): Likewise.
+
 2011-11-18  Jonathan Yong  <jon_y@users.sourceforge.net>
 
 	* time.h: Make sure to use 32bit time when _USE_32BIT_TIME_T in use.
